# Hackathon-SZFO

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: train.yaml
src/: app.py  run_streamlit.py  tmp.py  train.py
src/callbacks/: __init__.py  experiment_tracking.py  freeze.py
src/service/: __init__.py  constants.py  relabel.py  texts.yaml  upload.py  utils.py  visualize.py
src/utils/: __init__.py  config.py  constants.py  pylogger.py  utils.py
